BJS2-58055 1. Заменил stream().filter()  на .contains() в методе findPairsWithSum 2. В методе convertingNumbersToBinary заменил collect(Collectors.toList()) на toList() 3. Заменил использование дополнительного Set на word.chars()                                          .allMatch(ch -> alphabet.indexOf(ch) >= 0) и удалили приватный метод stringToSetConversion